erDiagram
  ORGANIZATIONS ||--o{ ORGANIZATION_CLUBS : owns
  CLUBS ||--o{ ORGANIZATION_CLUBS : belongs_to
  ORGANIZATIONS ||--o{ ORGANIZATION_ROLE_ASSIGNMENTS : grants
  USERS ||--o{ ORGANIZATION_ROLE_ASSIGNMENTS : receives

  INTEGRATION_DEFINITIONS ||--o{ CLUB_INTEGRATION_CONNECTIONS : enables
  CLUBS ||--o{ CLUB_INTEGRATION_CONNECTIONS : connects
  CLUB_INTEGRATION_CONNECTIONS ||--o{ INTEGRATION_SYNC_RUNS : runs

  PARTNER_API_CLIENTS ||--o{ CLUB_API_GRANTS : receives
  CLUBS ||--o{ CLUB_API_GRANTS : grants
  USERS ||--o{ CLUB_API_GRANTS : approves

  PARTNER_API_CLIENTS ||--o{ WEBHOOK_SUBSCRIPTIONS : owns
  CLUBS ||--o{ WEBHOOK_SUBSCRIPTIONS : configures
  WEBHOOK_SUBSCRIPTIONS ||--o{ WEBHOOK_DELIVERIES : delivers

  CLUBS ||--o{ DATA_EXPORT_JOBS : exports
  USERS ||--o{ DATA_EXPORT_JOBS : requests

  ANALYTICS_DEFINITIONS ||--o{ ANALYTICS_SNAPSHOTS : computes
  CLUBS ||--o{ ANALYTICS_SNAPSHOTS : measured_by
  ORGANIZATIONS ||--o{ ANALYTICS_SNAPSHOTS : measured_by

  CLUBS ||--o{ BENCHMARK_CONSENTS : grants
  USERS ||--o{ BENCHMARK_CONSENTS : approves
  BENCHMARK_PEER_GROUPS ||--o{ BENCHMARK_SNAPSHOTS : aggregates
  ANALYTICS_DEFINITIONS ||--o{ BENCHMARK_SNAPSHOTS : defines

  CLUBS ||--o{ PLATFORM_AUDIT_LOGS : audited
  ORGANIZATIONS ||--o{ PLATFORM_AUDIT_LOGS : audited
  USERS ||--o{ PLATFORM_AUDIT_LOGS : actor

